feat: conectar dashboard de asesor omnicanal
